--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <nav class="navbar navbar-dark bg-black navbar-expand-lg">
-    <a class="navbar-brand" href="index">
+    <a class="navbar-brand" href="http://www.cameron-lund.me">
       <img class="mr-2" src="Assets/favicons/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="Cameron Lund Logo" loading="lazy">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,13 +59,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="http://www.cameron-lund.me">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="services">Services</a>
+          <a class="nav-link" href="./services">Services</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="contact">Contact</a>
+          <a class="nav-link" href="./contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -81,6 +81,8 @@
       <a href="#contact-methods-anchor"><button type="button" class="btn btn-primary small">Get In Touch</button></a>
     </div>
 
+    <div class="main-body m-auto">
+
     <div class="container-fluid bg-secondary pb-0 pt-5 text-center">
       <div class="card w-90 p-4 m-auto">
         <h5 class="card-title text-primary">Let's Talk</h5>
@@ -88,12 +90,11 @@
         <p>I’m also based in South East London and can meet face-to-face with clients in the surrounding areas if required.<br>
       </div>
     </div>
-  </div>
 
     <div id="contact-methods-anchor" class="container-fluid desktop-contact-containers pt-5 m-auto text-center pl-0 pr-0">
       <div class="row m-auto">
         <div class="col-sm mb-5">
-          <div class="card m-auto" style="width: 18rem;">
+          <div class="card m-auto" style="width: 15rem;">
             <div class="card-body card-height-fix">
               <div class="container" style="height:50px;">
                 <img src="./Assets\icons\linkedin.png" class="icons card-img-top m-auto pt-3" alt="LinkedIn Icon">
@@ -104,7 +105,7 @@
           </div>
         </div>
         <div class="col-sm mb-5">
-          <div class="card m-auto" style="width: 18rem;">
+          <div class="card m-auto" style="width: 15rem;">
             <div class="card-body card-height-fix">
               <div class="container" style="height:50px;">
                 <img src="./Assets\icons\phone.png" class="icons card-img-top m-auto pt-3" alt="Phone Icon">
@@ -115,7 +116,7 @@
           </div>
         </div>
         <div class="col-sm mb-5">
-          <div class="card m-auto" style="width: 18rem;">
+          <div class="card m-auto" style="width: 15rem;">
             <div class="card-body card-height-fix">
               <div class="container" style="height:50px;">
                 <img src="./Assets\icons\mail.png" class="icons card-img-top m-auto pt-3" alt="Email Icon">
@@ -126,12 +127,12 @@
           </div>
         </div>
         <div class="col-sm mb-5">
-          <div class="card m-auto" style="width: 18rem;">
+          <div class="card m-auto" style="width: 15rem;">
             <div class="card-body card-height-fix">
               <div class="container" style="height:50px;">
                 <img src="./Assets\icons\form.png" class="icons card-img-top m-auto pt-3" alt="Form Icon">
               </div>
-              <h5 class="card-title text-primary pt-4">Contact Form</h5>
+              <h5 class="card-title text-primary pt-4">Form</h5>
               <a href="#contact-form-anchor"><button type="button" class="btn btn-primary small">Go To Form</button></a>
             </div>
           </div>
@@ -145,14 +146,19 @@
           <h5 class="card-title text-primary">Get The Most Out Of Your Free Consultation</h5>
           <p>I recommend allowing 30 minutes for an initial consultation to ensure there is adequate time to cover off the important early details. They are commitment-free discussions that typically cover the areas listed below. If possible, try and provide details on these topics ahead of the conversation via email or the contact form. This will allow me to give you a quick and detailed summary of how I can assist you. </p>
             <ul class="list-unstyled">
-              <li class="pt-2">- Intro to your organisation</li>
-              <li class="pt-2">- Objective(s) and KPIs</li>
-              <li class="pt-2">- Scope of work</li>
-              <li class="pt-2">- Resource requirements</li>
-              <li class="pt-2">- Priorities / Timelines</li>
-              <li class="pt-2">- Budgets (if available)</li>
-              <li class="pt-2">- Consulting Costs</li>
+              <li class="pt-2"><strong>Agenda</strong></li>
+              <li class="pt-2">Intro to your organisation</li>
+              <li class="pt-2">Objective(s) and KPIs</li>
+              <li class="pt-2">Scope of work</li>
+              <li class="pt-2">Resource requirements</li>
+              <li class="pt-2">Priorities / Timelines</li>
+              <li class="pt-2">Budgets (if available)</li>
+              <li class="pt-2">Consulting Costs</li>
             </ul>
+          </p>
+          <div class="collapse" id="moretext">
+
+            </div>
           </div>
         </div>
       </div>
@@ -164,6 +170,7 @@
   </div>
   <!--  Contact Form Ends -->
 
+  </div>
 
   <!-- Footer -->
 
