--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <!-- Required meta tags -->
   <meta http-equiv="content-type" content="text/html "charset="utf-8">
-  <meta type="content"
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description=" content="Experienced digital marketer based in London, supporting organistations with Web Analytics, CRO, SEO, PPC, Affiliate Marketing and Web Design.">
   <title>Cameron Lund | Freelance Digital Marketing Consultant</title>
@@ -52,7 +51,7 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <nav class="navbar navbar-dark bg-black navbar-expand-lg">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="http://www.cameron-lund.me">
       <img class="mr-2" src="Assets/favicons/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="Cameron Lund Logo" loading="lazy">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,13 +60,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="http://cameron-lund.me">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="services">Services</a>
+          <a class="nav-link" href="./services">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact">Contact</a>
+          <a class="nav-link" href="./contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -81,7 +80,7 @@
       <br>
       <h1 class="text-center title mt-3">UP YOUR<br>DIGITAL GAME</h1>
       <p class="text-light subtitle mt-3 mb-4 pl-3 pr-3">WITH A FREELANCE DIGITAL MARKETING CONSULTANT</p>
-      <a href="contact"><button id="bookaconsultation" type="button" class="btn btn-primary small">Book A Free Consultation</button></a>
+      <a href="./contact"><button id="bookaconsultation" type="button" class="btn btn-primary small">Book A Free Consultation</button></a>
     </div>
 
     <!-- Main Body Content Container -->
@@ -112,8 +111,7 @@
       <div class="text-center m-auto w-90 card">
         <div class="card-body">
           <h5 class="card-title text-primary">About Me</h5>
-          <p class="card-text">I’ve spent the last 10 years working in a range of digital roles, helping all sorts of organisations to boost online presence and make efficiencies with their digital processes. My experience has taught me about the broad range of marketing challenges faced by businesses every day, which continue to grow as the digital landscape evolves.<br><br>
-As a consultant I can help demystify the path to success in today’s highly-competitive online environment. I keep up to date with digital trends and technologies, regularly checking in with industry-leading resources like <a target="_blank" href="https://www.targetinternet.com/digital-marketing-podcasts/">The Digital Marketing Podcast</a>, <a target="_blank" href="https://www.producthunt.com">ProductHunt</a> and <a target="_blank" href="https://www.searchengineland.com">SearchEngineLand</a>. This allows me to recommend the most appropriate tools and strategies to clients and help them stand out from the crowd.
+          <p class="card-text">I’ve spent the last 10 years working in a range of digital roles, helping all sorts of organisations to boost online presence and make efficiencies with their digital processes. My experience has taught me about the broad range of marketing challenges faced by businesses every day, which continue to increase as the digital landscape evolves.<br><br> I'm passionate about understanding the digital world and identifying paths to success in today’s highly-competitive online environment. I keep up to date with digital trends and technologies, regularly checking in with industry-leading resources like <a target="_blank" href="https://www.targetinternet.com/digital-marketing-podcasts/">The Digital Marketing Podcast</a>, <a target="_blank" href="https://www.producthunt.com">ProductHunt</a> and <a target="_blank" href="https://www.searchengineland.com">SearchEngineLand</a>. This allows me to recommend the most appropriate tools and strategies to clients and help them stand out from the crowd.</p>
             <a href="#moretext" class="btn btn-link" data-toggle="collapse" aria-expanded="false" aria-controls="moretext">
               <span class="collapsed text-decoration-none">
                 Read more
@@ -122,11 +120,10 @@ As a consultant I can help demystify the path to success in today’s highly-com
                 Read less
               </span>
             </a>
-          </p>
           <div class="collapse" id="moretext">
             <p>With my analytics background, I use data to drive decision-making and ensure results are quantifiable. Prior to consulting, I helped theatre ticketing website <a target="_blank" href="https://seatplan.com">SeatPlan</a> to triple monthly traffic over two years through SEO. At <a target="_blank" href="https://accorhotels.com">AccorHotels</a> I oversaw their UK PPC campaigns, ensuring they remained profitable to the business throughout my employment. More recently, I’ve worked with <a target="_blank" href="https://hilton.com">Hilton</a> to build out internal mass communication workflows and marketing performance dashboards. These are the kind of results and outputs I work hard to deliver for each of my employers.<br><br>
             If you are a growth-focused organisation, please do get in touch to learn more about my experience and find out how I can help you.</p>
-              <a href="contact"><button class="btn btn-primary">Contact</button></a>
+              <a href="./contact"><button class="btn btn-primary">Contact</button></a>
             </div>
           </div>
         </div>
@@ -200,9 +197,9 @@ As a consultant I can help demystify the path to success in today’s highly-com
                       <p>Using strategy frameworks from the <a target=”_blank” href="https://digitalmarketinginstitute.com/en-gb">Digital Marketing Institute</a>, I can assess your business from a digital marketing perspective and make empirical recommendations on where you can improve.</p>
                         <ul class="list-unstyled">
                           <li><strong>Services:</strong></li>
-                          <li class="pt-2">- Competitor Analyses</li>
-                          <li class="pt-2">- Channel Strategies</li>
-                          <li class="pt-2">- Business Strategies</li>
+                          <li class="pt-2">Competitor Analyses</li>
+                          <li class="pt-2">Channel Strategies</li>
+                          <li class="pt-2">Business Strategies</li>
                         </ul>
                     </div>
                   </div>
@@ -220,9 +217,9 @@ As a consultant I can help demystify the path to success in today’s highly-com
                       <p>If you need to monitor your online performance, I can implement Google Analytics and channel-specific analytics tools to track customer behaviour and marketing KPIs. I also have extensive experience building marketing performance dashboards using services like <a target="_blank" href="https://www.powerbi.com">Power BI</a> and <a target="_blank" href="https://www.tableau.com">Tableau.</a></p>
                         <ul class="list-unstyled">
                           <li><strong>Services:</strong></li>
-                          <li class="pt-2">- Analytics Implementation</li>
-                          <li class="pt-2">- Performance Analysis</li>
-                          <li class="pt-2">- Performance Dashboards</li>
+                          <li class="pt-2">Analytics Implementation</li>
+                          <li class="pt-2">Performance Analysis</li>
+                          <li class="pt-2">Performance Dashboards</li>
                         <ul>
                     </div>
                   </div>
@@ -240,9 +237,9 @@ As a consultant I can help demystify the path to success in today’s highly-com
                       <p>I can conduct a full audit of your website using leading industry SEO tools like <a target="_blank" href="https://www.screamingfrog.co.uk/">Screaming Frog</a> and <a target="_blank" href="https://www.ahrefs.com">Ahrefs</a> to help boost your organic rank across search engines.</p>
                       <ul class="list-unstyled">
                         <li><strong>Services:</strong></li>
-                        <li class="pt-2">- On-site SEO Review</li>
-                        <li class="pt-2">- Outreach & Backlink Acquisition</li>
-                        <li class="pt-2">- Content Strategy</li>
+                        <li class="pt-2">On-site SEO Review</li>
+                        <li class="pt-2">Outreach & Backlink Acquisition</li>
+                        <li class="pt-2">Content Strategy</li>
                       </ul>
                     </div>
                   </div>
@@ -260,9 +257,9 @@ As a consultant I can help demystify the path to success in today’s highly-com
                       <p>Looking to improve your returns on Pay Per Click Advertising? I can build, execute and optimise campaigns so you can get the most out of your PPC budget.</p>
                       <ul class="list-unstyled">
                         <li><strong>Services:</strong></li>
-                        <li class="pt-2">- Campaign Creation</li>
-                        <li class="pt-2">- Keyword Research</li>
-                        <li class="pt-2">- Ad Creation</li>
+                        <li class="pt-2">Campaign Creation</li>
+                        <li class="pt-2">Keyword Research</li>
+                        <li class="pt-2">Ad Creation</li>
                       </ul>
                     </div>
                   </div>
@@ -281,8 +278,8 @@ As a consultant I can help demystify the path to success in today’s highly-com
                     <strong>Services:</strong>
                     <div class="container m-auto">
                       <ul class="list-unstyled">
-                        <li class="pt-2">- Landing Page Design</li>
-                        <li class="pt-2">- Landing Page Build</li>
+                        <li class="pt-2">Landing Page Design</li>
+                        <li class="pt-2">Landing Page Build</li>
                       </ul>
                   </div>
                   </div>
@@ -301,9 +298,9 @@ As a consultant I can help demystify the path to success in today’s highly-com
                       <p>If you have a user database and would like to increase engagement via email, I can manage the communications process or assist with specific aspects of delivering email campaigns.</p>
                         <ul class="list-unstyled">
                           <li><strong>Services:</strong></li>
-                          <li class="pt-2">- Campaign Workflows</li>
-                          <li class="pt-2">- Email Template Design</li>
-                          <li class="pt-2">- Campaign Automation</li>
+                          <li class="pt-2">Campaign Workflows</li>
+                          <li class="pt-2">Email Template Design</li>
+                          <li class="pt-2">Campaign Automation</li>
                         </ul>
                     </div>
                   </div>
