--- a/blog.html
+++ b/blog.html
@@ -43,9 +43,109 @@
 
 </head>
 
-<body class="mb-0">
+<body>
 
-  <div id="dib-posts"></div>
+<nav class="navbar navbar-dark bg-black navbar-expand-lg">
+  <a class="navbar-brand" href="http://www.cameron-lund.me">
+    <img class="mr-2" src="Assets/favicons/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="Cameron Lund Logo" loading="lazy">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="http://cameron-lund.me">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./services">Services</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./contact">Contact</a>
+      </li>
+      <li class="nav-item-active">
+        <a class="nav-link" href="./blog">Blog</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+  <div class="container-fluid p-0 mb-0 bg-secondary">
+    <div class="jumbotron blog-image jumbotron-fluid pl-1 pr-1 bp-5 mb-0 text-center">
+      <br>
+      <h1 class="text-center title mt-3 pl-2 pr-2">CHARGE<br>YOUR MIND</h1>
+      <p class="text-light subtitle mt-3 mb-4 pl-3 pr-3">DIGITAL MARKETING INSIGHTS</p>
+      <a href="#dib-posts"><button type="button" class="btn btn-primary small">Read the blog</button></a>
+    </div>
+
+    <!-- Blog Content -->
+
+      <div class="w-90 m-auto pt-5 pb-4 bg-secondary">
+
+        <div class="row">
+
+          <!-- Blog Entries Column -->
+          <div class="col-md-8">
+
+            <!-- Blog Post -->
+            <div class="card mb-4">
+              <img class="card-img-top" src="Assets/blog-images/running-750x300.png" alt="Card image cap">
+              <div class="card-body">
+                <h2 class="card-title text-primary">Smash Your Marketing With Tips From The Running Industry</h2>
+                <p class="card-text">Sucessful running events are have a lot to teach about building brand awareness and engagement. This post explores the best-practice marketing methods that have been adopted by successful races in the UK, and takes a look at how they can be applied to organisations in other industries.</p>
+                <a href="blog\smash-your-marketing-with-tips-from-the-running-industry" class="btn btn-primary">Read More &rarr;</a>
+              </div>
+              <div class="card-footer text-muted">
+                Posted on June 23, 2020 by
+                <a href="#">Cameron Lund</a>
+              </div>
+            </div>
+
+            <!-- Blog Post -->
+            <div class="card mb-4">
+              <img class="card-img-top" src="Assets/blog-images/principles-750x300.png" alt="Card image cap">
+              <div class="card-body">
+                <h2 class="card-title text-primary">How To Take Marketing Risks Without Getting Fired</h2>
+                <p class="card-text">The vast majority of marketing is boring and forgettable. In order to succeed, we need to start taking risks in a sensible way. Take a look at some of the guiding principles for creative marketing and how other businesses have done it.</p>
+                <a href="blog\how-to-take-marketing-risks-without-getting-fired.html" class="btn btn-primary">Read More &rarr;</a>
+              </div>
+              <div class="card-footer text-muted">
+                Posted on 20 June, 2020 by
+                <a href="#">Cameron Lund</a>
+              </div>
+            </div>
+
+            <!--
+            <ul class="pagination justify-content-center mb-4">
+              <li class="page-item">
+                <a class="page-link" href="#">&larr; Older</a>
+              </li>
+              <li class="page-item disabled">
+                <a class="page-link" href="#">Newer &rarr;</a>
+              </li>
+            </ul>
+          -->
+          </div>
+
+
+          <!-- Sidebar Widgets Column -->
+          <div class="col-md-4">
+
+            <!-- Side Widget -->
+            <div class="card">
+              <h5 class="card-header">About This Blog</h5>
+              <div class="card-body">
+                This blog offers guidance on digital marketing topics to help others get the most out of promoting their business online. If you would like to learn more about any of the the strategies or tactics mentioned here then <a href="contact" class="link">get in touch</a>.
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+        <!-- /.row -->
+
+      </div>
+      <!-- END BLOG CONTENT -->
 
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXJS6Z8"
@@ -66,11 +166,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
-
-    <script>
-    var dib_id = '00OMG1L3UQ2YBD2PCS3O';
-    </script>
-    <script src="https://dropinblog.com/js/embed.js"></script>
 
   </body>
   </html>
