--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="http://cameron-lund.me">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="./index">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="./services">Services</a>
@@ -75,14 +75,14 @@
       <br>
       <h1 class="text-center title mt-3 pl-2 pr-2">CHARGE<br>YOUR MIND</h1>
       <p class="text-light subtitle mt-3 mb-4 pl-3 pr-3">DIGITAL MARKETING INSIGHTS</p>
-      <a href="#dib-posts"><button type="button" class="btn btn-primary small">Read the blog</button></a>
+      <a href="#blog-posts"><button type="button" class="btn btn-primary small">Read the blog</button></a>
     </div>
 
     <!-- Blog Content -->
 
       <div class="w-90 m-auto pt-5 pb-4 bg-secondary">
 
-        <div class="row">
+        <div id="blog-posts" class="row">
 
           <!-- Blog Entries Column -->
           <div class="col-md-8">
@@ -92,11 +92,11 @@
               <img class="card-img-top" src="Assets/blog-images/running-750x300.png" alt="Card image cap">
               <div class="card-body">
                 <h2 class="card-title text-primary">Smash Your Marketing With Tips From The Running Industry</h2>
-                <p class="card-text">Sucessful running events are have a lot to teach about building brand awareness and engagement. This post explores the best-practice marketing methods that have been adopted by successful races in the UK, and takes a look at how they can be applied to organisations in other industries.</p>
+                <p class="card-text">Sucessful running events have a lot to teach about building brand awareness and engagement. This post explores the best-practice marketing methods that have been adopted by successful races in the UK, and takes a look at how they can be applied to organisations in other industries.</p>
                 <a href="blog\smash-your-marketing-with-tips-from-the-running-industry" class="btn btn-primary">Read More &rarr;</a>
               </div>
               <div class="card-footer text-muted">
-                Posted on June 23, 2020 by
+                Posted on June 24, 2020 by
                 <a href="#">Cameron Lund</a>
               </div>
             </div>
@@ -107,10 +107,10 @@
               <div class="card-body">
                 <h2 class="card-title text-primary">How To Take Marketing Risks Without Getting Fired</h2>
                 <p class="card-text">The vast majority of marketing is boring and forgettable. In order to succeed, we need to start taking risks in a sensible way. Take a look at some of the guiding principles for creative marketing and how other businesses have done it.</p>
-                <a href="blog\how-to-take-marketing-risks-without-getting-fired.html" class="btn btn-primary">Read More &rarr;</a>
+                <a href="blog\how-to-take-marketing-risks-without-getting-fired" class="btn btn-primary">Read More &rarr;</a>
               </div>
               <div class="card-footer text-muted">
-                Posted on 20 June, 2020 by
+                Posted on 26 June, 2020 by
                 <a href="#">Cameron Lund</a>
               </div>
             </div>
